--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -32,7 +32,8 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -50,10 +51,10 @@ body * {
   margin-top: 8px;
 }
 
-#switch{
-position: relative;
-width: 64px;
-margin: 4px auto;
+#switch {
+  position: relative;
+  width: 64px;
+  margin: 4px auto;
 }
 
 #switch button {
@@ -66,9 +67,9 @@ margin: 4px auto;
   top: 50%;
   left: 0;
   z-index: 1;
-  transform: translateY(-50%) ;
+  transform: translateY(-50%);
 }
-.light #switch button{
+.light #switch button {
   right: 0;
   left: initial;
 }
@@ -78,7 +79,7 @@ margin: 4px auto;
   width: 64px;
   height: 24px;
   background: var(--surface-color);
-  border: 1px solid var(--stroke-color) ;
+  border: 1px solid var(--stroke-color);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 9999px;
